<resources>
    <string name="app_name">Statistical Service</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">用户名错误</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">必填</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="日期">日期</string>
    <string name="岗位编号">岗位编号</string>
    <string name="员工所属组">员工所属组</string>
</resources>
